examples/test/testpolicy7547.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7547
  namespace: namespace392
spec:
  podSelector:
    matchLabels:
      key30: value6
      key0: value24
      key5: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value32
          key4: value31
      podSelector:
        matchLabels:
          key46: value43
